# main

./: README.md  main.py  pyproject.toml
scripts/: clock.py  crypto_square.py  darts.py  hamming_space_dna.py  kindergarten_garden.py  perfect_number.py  robot.py
scripts/all-your-base/: all_your_base.py
scripts/all-your-base/.exercism/: metadata.json
scripts/bank-account/: bank_account.py  bank_account_test.py
scripts/bank-account/.exercism/: metadata.json
scripts/isbn-verifier/: HELP.md  isbn_verifier.py
scripts/isbn-verifier/.exercism/: metadata.json
scripts/isogram/: isogram.py  isogram_test.py
scripts/isogram/.exercism/: metadata.json
scripts/pangram/: pangram.py
scripts/pangram/.exercism/: metadata.json
scripts/resistor-color/: resistor_color.py  resistor_color_duo.py  resistor_color_duo_test.py
scripts/resistor-color-trio/: resistor_color_trio.py
scripts/resistor-color-trio/.exercism/: metadata.json
scripts/resistor-color/.exercism/: metadata.json
scripts/reverse-string/: reverse_string.py
scripts/reverse-string/.exercism/: metadata.json
scripts/rna-transcription/: rna_transcription.py
scripts/rotational-cipher/: rotational_cipher.py
scripts/sieve/: sieve.py
scripts/two-bucket/: two_bucket.py
tests/: test_clock.py  test_crypto_square.py  test_darts.py  test_hamming_space_dna.py  test_kindergarten_garden.py  test_perfect_number.py  test_robot.py
unit_testing/armstrong_numbers/: armstrong.py
unit_testing/calculating_pi/: circles.py  test_circles.py
unit_testing/triangle/: README.md  test_triangle.py  triangle.py
(+4 files in other folders)
